--- a/src/styles/animations/components/KonSelect/_ToggleOptions_detached.scss
+++ b/src/styles/animations/components/KonSelect/_ToggleOptions_detached.scss
@@ -1,7 +1,7 @@
 /*
  * Animation for the detached variation of the component
  */
-.kon-select.detached{
+.kon-select.detached, .kon-select-multiple.detached{
     .kon-show-options{
        &-enter-active, &-leave-active{
            transition-property: transform, opacity, background-color;
