Added select multiple component with fallback - Updated style resets to include pseudo elements within the library scope - Delegated core select component methods to a mixin

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 
 @use 'components/_KonSelect';
 
+@use 'components/_KonSelectMultiple';
+
 @use 'components/_KonOption';
 
 @use 'components/_KonStepper';
