--- a/src/styles/components/_KonButton.scss
+++ b/src/styles/components/_KonButton.scss
@@ -45,7 +45,7 @@
         }
         &:focus-visible:active::before{
             // keyboard only :D
-                background: rgba(80, 67, 255, 0.2);
+            background: rgba(var(--konponent-color), 0.2);
         }
         &::before{
             content: '';
@@ -56,7 +56,7 @@
             height: 100%;
             opacity: 0;
             border-radius: var(--radius);
-            background: rgba(80, 67, 255, 0.1);
+            background: rgba(var(--konponent-color), 0.1);
             transform: scale(0);
             transition-property: transform, opacity;
             transition-duration: 150ms;
