Fixed a reacticity bug with toggleable components - Added readonly mode for toggleable components

--- a/src/styles/components/_KonCheckbox.scss
+++ b/src/styles/components/_KonCheckbox.scss
@@ -12,6 +12,9 @@
         opacity: .6;
         pointer-events: none;
     }
+    &.readonly{
+        pointer-events: none;
+    }
     & > .kon-checkbox-content{
         position: relative;
         width: 24px;
