--- a/src/styles/components/select/_KonSelect.scss
+++ b/src/styles/components/select/_KonSelect.scss
@@ -1,5 +1,7 @@
-@use '../animations/components/KonSelect/ToggleOptions_default';
-@use '../animations/components/KonSelect/ToggleOptions_detached';
+@use '../../animations/components/KonSelect/ToggleOptions_default';
+@use '../../animations/components/KonSelect/ToggleOptions_detached';
+
+@use 'KonSelectOptionsList';
 
 .kon-select{
     --font-size: .8rem;
@@ -63,34 +65,6 @@
     }
     .kon-value{
         color: var(--current-foreground-color);
-    }
-    &.detached{
-        & > .kon-options{
-            top: calc(100% + 10px);
-            border-radius: var(--radius);
-        }
-    }
-    & > .kon-options{
-        will-change: max-height;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        max-height: 208px;
-        width: 100%;
-        color: var(--current-foreground-color);
-        background: var(--current-background-color);
-        padding: 4px;
-        border-radius: 0px 0px 12px 12px;
-        z-index: 99;
-        overflow: hidden;
-        transform: translateY(0);
-        transition: background 250ms ease;
-        & > .kon-options-list{
-            transition: opacity 100ms linear;
-            width: 100%;
-            max-height: 200px;
-            overflow: auto;
-        }
     }
     /* kon-select-label */
     &-label{
