Major select / select multiple refactor - Added customizable filters with internal and external support - Consolidated shared functionality into a mixin - Refactored keyboard navigation to support filters - Added a bunch of comment docs (WIP)

--- a/src/styles/components/select/_KonSelect.scss
+++ b/src/styles/components/select/_KonSelect.scss
@@ -1,5 +1,6 @@
 @use '../../animations/components/KonSelect/ToggleOptions_default';
 @use '../../animations/components/KonSelect/ToggleOptions_detached';
+@use '../../animations/components/KonSelect/OptionsListFilter';
 
 @use 'KonSelectOptionsList';
 
@@ -60,11 +61,27 @@
         display: flex;
         align-items: center;
         color: rgba(var(--foreground-color), 0.4);
+        opacity: 1;
+        transition: opacity 250ms ease;
         /* Text must stay on top of the option menu to prevent getting occluded during the reveal transition */
-        z-index: 100;
+        z-index: 1;
+    }
+    .kon-filter-input{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: none;
+        border: none;
+        z-index: 2;
+        padding: 8px 12px;
     }
     .kon-value{
         color: var(--current-foreground-color);
+        &-hidden{
+            opacity: 0;
+        }
     }
     /* kon-select-label */
     &-label{
