--- a/src/styles/components/select/_KonOption.scss
+++ b/src/styles/components/select/_KonOption.scss
@@ -7,7 +7,10 @@
     padding: 8px 12px;
     margin-bottom: 2px;
     cursor: pointer;
-    transition-property: color, background, padding;
+    transition-property: color, background, padding, max-height, opacity;
+    // TEMP
+    will-change: padding, max-height;
+    max-height: 36px;
     transition-timing-function: ease;
     transition-duration: 250ms;
     overflow: hidden;
