--- a/src/styles/components/select/_KonSelectMultiple.scss
+++ b/src/styles/components/select/_KonSelectMultiple.scss
@@ -53,6 +53,9 @@
     .kon-placeholder{
         /* Add back the removed 4px from main padding since the chips do have padding themselves */
         padding-left: 4px;
+        &-hidden{
+            opacity: 0;
+        }
     }
     .kon-placeholder, .kon-values{
         /* Allow it to have a z-index */
@@ -77,23 +80,22 @@
         height: 100%;
     }
     .kon-filter-input{
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        display: inline-block;
+        flex: 1;
+        max-width: 100%;
+        min-width: 40px;
+        transition-property: opacity, transform;
+        transition-duration: 250ms;
+        transition-timing-function: ease;
+        color: var(--current-foreground-color);
         background: none;
         border: none;
         z-index: 2;
-        padding: 8px 12px;
     }
     .kon-values{
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
-        &-hidden{
-            opacity: 0;
-        }
         .kon-value-chip{
             position: relative;
             display: inline-flex;
