--- a/src/styles/components/select/_KonOption.scss
+++ b/src/styles/components/select/_KonOption.scss
@@ -20,11 +20,11 @@
     border: none;
     background: none;
     outline: none;
-    &.disabled{
-        pointer-events: none;
+    &:disabled{
+        cursor: auto;
         opacity: .6;
     }
-    &:hover, &:focus-visible{
+    &:hover:not(:disabled), &:focus-visible{
         color: rgb(var(--konponent-color));
         padding-left: 16px;
     }
