--- a/src/styles/components/_KonInput.scss
+++ b/src/styles/components/_KonInput.scss
@@ -19,6 +19,7 @@
     transition-property: opacity;
     transition-duration: 250ms;
     transition-timing-function: ease;
+    width: 200px;
     // font-size: var(--font-size);
     &.has-label{
         margin-top: 22px;
@@ -40,7 +41,7 @@
         pointer-events: none;
     }
     & > input{
-        width: 200px;
+        width: 100%;
         border: none;
         transition-property: padding, background, color;
         transition-timing-function: ease;
@@ -95,5 +96,43 @@
         top: calc(100% + 2px);
         font-size: .7rem;
         color: var(--current-label-color);
+    }
+    &.has-leading-icon{
+        & > input{
+            padding-left: 36px;
+        }
+    }
+    &.has-trailing-icon{
+        & > input{
+            padding-right: 36px;
+        }
+    }
+    & .kon-input-icon{
+        position: absolute;
+        top: 2px;
+        height: calc(100% - 4px);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+        background: var(--current-background-color);
+        border-radius: calc(var(--radius) - 2px);
+        &.leading{
+            left: 2px;
+        }
+        &.trailing{
+            right: 2px;
+        }
+        & .placeholder-svg{
+            height: 100%;
+            width: auto;
+        }
+        & .kon-input-icon-content{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+        }
     }
 }
