Added new component KonCollapse

--- a/packages/konponents/src/styles/main.scss
+++ b/packages/konponents/src/styles/main.scss
@@ -20,4 +20,6 @@
 
 @use 'components/KonRadio';
 
+@use 'animations/components/KonCollapse';
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
