--- a/packages/konponents/src/styles/components/select/_KonOption.scss
+++ b/packages/konponents/src/styles/components/select/_KonOption.scss
@@ -20,6 +20,7 @@
     border: none;
     background: none;
     outline: none;
+    font-family: inherit;
     &:disabled{
         cursor: auto;
         opacity: .6;
