--- a/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
@@ -42,6 +42,7 @@
     }
     &.disabled{
         pointer-events: none;
+        opacity: .6;
     }
     .kon-multiple-fallback{
         position: absolute;
