--- a/packages/konponents/src/styles/utils/_reset.scss
+++ b/packages/konponents/src/styles/utils/_reset.scss
@@ -5,6 +5,7 @@
 [class^="kon-"] *::before, [class*=" kon-"] *::after{
   box-sizing: border-box;
   outline: none;
+  font-family: inherit;
   -webkit-tap-highlight-color: transparent;
   /* W/H */
   &::-webkit-scrollbar {
