--- a/packages/konponents/src/styles/utils/_variables.scss
+++ b/packages/konponents/src/styles/utils/_variables.scss
@@ -1,18 +1,22 @@
-[class^="kon-"], [class*="kon-"],
-[class^="kon-"] *, [class*=" kon-"] *{
-    font-family: "Poppins";
-    // font-size: 1rem;
-}
+// [class^="kon-"], [class*="kon-"],
+// [class^="kon-"] *, [class*=" kon-"] *{
+//     font-family: "Poppins";
+//     // font-size: 1rem;
+// }
 :root{
     --primary-color: 26, 92, 255;
     --danger-color: 231, 112, 112;
     --warning-color: 255, 255, 0; //255,255,0 is TEMPORARY!
     --success-color: 68, 223, 48;
-    --dark-color: 18, 26, 45;
-    --dark-accent-color: 31, 44, 76;
-    // --dark-accent-color: 25, 36, 72; (alt)
+    
+    // --dark-color: 18, 26, 45;
+    // --dark-accent-color: 31, 44, 76;
+    --dark-color: 20, 20, 23;
+    --dark-accent-color: 12, 12, 12;
+
     --light-color: 240, 243, 250;
     --light-accent-color: 226, 231, 244;
+    
     --background-color: var(--light-color);
     --background-accent-color: var(--light-accent-color);
     --background-active-color: 255, 255, 255;
@@ -23,7 +27,7 @@
     // --background-accent-color: var(--dark-accent-color);
     // --background-active-color: var(--dark-color);
     --background-color: 20, 20, 23;
-    --background-accent-color: 12,12,12;
+    --background-accent-color: 12, 12, 12;
     --background-active-color: 30, 32, 35;
     --foreground-color: var(--light-color);
 }
