--- a/packages/konponents/src/styles/components/select/_KonSelect.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelect.scss
@@ -3,6 +3,7 @@
 @use '../../animations/components/KonSelect/OptionsListFilter';
 
 @use 'KonSelectOptionsList';
+@use 'Shared';
 
 .kon-select{
     --font-size: .8rem;
@@ -41,7 +42,7 @@
      */
     z-index: 2;
     &:hover, &:focus, &:focus-within{
-        /* {10, ..., 17} */
+        /* {13, ..., 21} */
         --current-background-color: rgb(var(--background-active-color));
         /* Use filter instead of box shadow since we are applying a shadow to the shole thing and we don't want overlaps */
         filter: drop-shadow( 0 0 20px rgba(var(--konponent-color), 0.1) );
