--- a/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
@@ -17,6 +17,7 @@
     position: relative;
     padding: 8px 12px;
     padding-left: 8px;
+    padding-right: 30px;
     background: var(--current-background-color);
     border-radius: 12px;
     user-select: none;
