--- a/packages/konponents/src/styles/components/select/_Shared.scss
+++ b/packages/konponents/src/styles/components/select/_Shared.scss
@@ -27,4 +27,25 @@
             }
         }
     }
+    > .chevron{
+        display: flex;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        right: 8px;
+        height: 100%;
+        color:rgba(var(--foreground-color), 1);
+        transform: rotate(0deg);
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: ease;
+    }
+    &.open{
+        > .chevron{
+            transform: rotate(180deg);
+        }
+        > .kon-select-label.is-placeholder{
+            @include elevated-placeholder;
+        }
+    }
 }
