--- a/packages/konponents/src/styles/main.scss
+++ b/packages/konponents/src/styles/main.scss
@@ -20,6 +20,8 @@
 
 @use 'components/KonRadio';
 
+@use 'components/KonModal';
+
 @use 'animations/components/KonCollapse';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
