--- a/packages/konponents/src/styles/components/select/_KonSelect.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelect.scss
@@ -1,6 +1,7 @@
 @use '../../animations/components/KonSelect/ToggleOptions_default';
 @use '../../animations/components/KonSelect/ToggleOptions_detached';
 @use '../../animations/components/KonSelect/OptionsListFilter';
+@use '../../animations/components/ToggleMessage';
 
 @use 'KonSelectOptionsList';
 @use 'Shared';
