--- a/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
@@ -2,6 +2,7 @@
 @use '../../animations/components/KonSelect/ToggleOptions_detached';
 @use '../../animations/components/KonSelect/OptionsListFilter';
 @use '../../animations/components/KonSelectMultiple/ChipList';
+@use '../../animations/components/ToggleMessage';
 
 @use 'KonSelectOptionsList';
 @use 'Shared';
