--- a/packages/konponents/src/styles/components/select/_Shared.scss
+++ b/packages/konponents/src/styles/components/select/_Shared.scss
@@ -48,4 +48,12 @@
             @include elevated-placeholder;
         }
     }
+    > .kon-select-message{
+        position: absolute;
+        padding: 0 8px;
+        left: 0;
+        top: calc(100% + 2px);
+        font-size: .7rem;
+        color: var(--current-label-color);
+    }
 }
