--- a/packages/konponents/src/styles/components/_KonButton.scss
+++ b/packages/konponents/src/styles/components/_KonButton.scss
@@ -3,7 +3,14 @@
     --radius: 12px;
     --padding: 8px 12px;
     --konponent-color: var(--primary-color);
+    
     --current-foreground-color: var(--foreground-color);
+    --default-foreground: 255,255,255;
+    --text-idle-foreground: var(--konponent-color);
+    --border-idle-foreground: var(--foreground-color);
+    --border-hover-foreground: 255,255,255;
+    --border-keyboard-foreground: var(--foreground-color);
+
     position: relative;
     display: inline-flex;
     align-items: center;
@@ -11,7 +18,8 @@
     padding: var(--padding);
     margin: 4px;
     background: rgb(var(--konponent-color));
-    color: #fff;
+    /* color: #fff; */
+    color: rgb(var(--default-foreground));
     border-radius: var(--radius);
     font-size: var(--font-size);
     font-family: 'Poppins';
@@ -21,6 +29,51 @@
     transition-duration: 250ms;
     transition-timing-function: ease;
     box-sizing: border-box;
+    &.danger{
+        --konponent-color: var(--danger-color);
+    }
+    &.success{
+        --konponent-color: var(--success-color);
+    }
+    &.success, &.danger{
+        &.border{
+            &:focus-visible:active{
+                --current-foreground-color: 255,255,255;
+            }
+        }
+    }
+    /* This is a special sub variant */
+    &.blank{
+        --konponent-color: var(--background-active-color);
+        color: rgb(var(--current-foreground-color));
+        &:focus, &:hover{
+            box-shadow: 0 5px 20px -4px rgba(0, 0, 0, .2);
+        }
+        &:active{
+            box-shadow: none;
+        }
+        &.text{
+            --current-foreground-color: var(--foreground-color);
+            &::before{
+                background: rgba(var(--current-foreground-color), 0.1);
+            }
+            &:focus-visible:active::before{
+                background: rgba(var(--current-foreground-color), 0.2);
+            }
+        }
+        &.border{
+            &:hover, &:focus{
+                --border-color: var(--foreground-color);
+                --current-foreground-color: var(--background-active-color);
+            }
+            &:focus-visible{
+                --current-foreground-color: var(--foreground-color);
+            }
+            &:focus-visible:active{
+                --current-foreground-color: var(--background-active-color);
+            }
+        }
+    }
     &.block{
         display: block;
         width: 100%;
@@ -36,9 +89,10 @@
         }
     }
     &.text{
+        --current-foreground-color: var(--text-idle-foreground);
         // ToDo: text variant has visibility problems on dark theme. Maybe crankig up the opacity of the bg could help
         background: none;
-        color: rgb(var(--konponent-color));
+        color: rgb(var(--current-foreground-color));
         &:hover, &:focus{
             box-shadow: none;
             transform: none;
@@ -70,30 +124,32 @@
         }
     }
     &.border{
+        --current-foreground-color: var(--border-idle-foreground);
         --border-width: 2px;
         --border-color: var(--background-color);
         background: transparent;
-        color: rgb(var(--current-foreground-color));
         box-shadow: inset 0 0 0 var(--border-width) rgb(var(--border-color));
+        > *{
+            color: rgb(var(--current-foreground-color));
+        }
         &:hover, &:focus{
+            --current-foreground-color: var(--border-hover-foreground);
             // override the glow effect in the default button (inherit does not work with variables)
             box-shadow: inset 0 0 0 var(--border-width) rgb(var(--border-color));
             --border-color: var(--konponent-color);
             transform: none;
-            background: rgb(var(--konponent-color));
-            color: #FFF;
+            background: rgb(var(--border-color));
         }
         // This button variant is the hardest to implement when it comes to keyboard navigation's visual feedback
         &:focus-visible{
+            --current-foreground-color: var(--border-keyboard-foreground);
             background: transparent;
             --border-color: var(--konponent-color);
-            // again, inherit does not work with variables :(
-            color: rgb(var(--current-foreground-color));        
         }
         &:focus-visible:active{
             // Keyboard only :D
-            background: rgb(var(--konponent-color));
-            color: #FFF;
+            background: rgb(var(--border-color));
+            --current-foreground-color: var(--border-hover-foreground);
         }
     }
     &.xs{
